--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>My Webpage</head>
+    <head>
+        <title>My Webpage</title>
+        </head>        
     <body>
         Hello world! Hello again! Hello a third time!
     </body>
